# wiki-server

./: .gitignore  README.md  clear_cache.py  import_data.py  pyproject.toml  requirements.txt  webp.py
deploy/: 99-panel  deploy.sh  update_wiki.sh
deploy/nginx/: nginx.conf
deploy/nginx/conf.d/: default.conf  pirate9.conf  wiki.conf
index/: admin.py  models.py  urls.py  views.py
index/templates/admin/: base.html
resident/: admin.py  apps.py  models.py  urls.py  views.py
resident/templates/resident/: saikai.html
saikai/: admin.py  apps.py  models.py  urls.py  views.py
todo/: admin.py  apps.py  models.py  urls.py  views.py
wiki/: urls.py
