[project]
name = "wiki-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "django-redis>=6.0.0",
    "django-tinymce>=5.0.0",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.3",
    "typing-extensions>=4.15.0",
    "uwsgi>=2.0.31",
]
